# tensorrt-models

./: .gitignore  .gitmodules  Dockerfile  INSTALL.md  README.md  tensorrt_dev.Dockerfile
alexnet/: CMakeLists.txt  Readme.MD  alex.cpp  alex_pytorch.py  alex_trt.py  get_wts_format.py  onnx_2_trt.py  torch_2_onnx.py  trt_x.py
dockers/: tensorrt_dev.Dockerfile  x86
industrial_embeddding_dl/: README.md  export_onnx.py  pytrt.py  segcolors.py
misc/: convert_coco2imagenet.py
mlp/: CMakeLists.txt  Readme.md  build_engine.cpp  build_engine.py  build_mlp_engine.py  infer.cpp  infer.py  mlp.cpp  mlp.engine  mlp.py
mlp_alexnet/: infer.py
resnet/: CMakeLists.txt  Readme.md  build_engine.py  conversion.py  deployment.py  logging.h  resnet.cpp
resnet/resnet18/: CMakeLists.txt  build_engine.cpp  build_engine.py  gen_wts.py  infer.cpp  infer.py
resnet/resnet34/: Readme.md  build_engine.cpp  build_engine.py  gen_wts.py  get_wts.py  infer.py  resnet34.py
resnet/resnet50/: CMakeLists.txt  build_engine.cpp  build_engine.py  gen_wts.py  infer.cpp
yolov3/: CMakeLists.txt  Readme.MD  Readme.md  build_engine.cpp  build_engine.py  get_wts_file.py  get_wts_format.py  infer.py  logging.h  onnx_2_trt.py  yololayer.h  yolov3.cpp
yolov3_old/: CMakeLists.txt  calibrator.cpp  calibrator.h  get_wts_format.py  onnx_2_trt.py  torch_2_onnx.py  utils.h  yololayer.cu  yolov3_trt.py
